build/log/idf_py_stdout_output_18100
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\esp32_3c\build\bootloader\esp-idf\esptool_py && d:\Espressif32\python_env\idf5.0_py3.10_env\Scripts\python.exe E:/esp/esp32c3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/esp32_3c/build/bootloader/bootloader.bin"
Bootloader binary size 0x5580 bytes. 0x2a80 bytes (33%) free.
[2/7] Building C object esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj
FAILED: esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj 
ccache D:\Espressif32\tools\xtensa-esp32s3-elf\esp-2022r1-RC1-11.2.0\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe  -IE:/esp32_3c/build/config -IE:/esp32_3c/components/bluetooth -IE:/esp/esp32c3/esp-idf/components/newlib/platform_include -IE:/esp/esp32c3/esp-idf/components/freertos/FreeRTOS-Kernel/include -IE:/esp/esp32c3/esp-idf/components/freertos/esp_additions/include/freertos -IE:/esp/esp32c3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/esp/esp32c3/esp-idf/components/freertos/esp_additions/include -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include/soc -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/port/esp32s3/. -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/port/esp32s3/private_include -IE:/esp/esp32c3/esp-idf/components/heap/include -IE:/esp/esp32c3/esp-idf/components/log/include -IE:/esp/esp32c3/esp-idf/components/soc/include -IE:/esp/esp32c3/esp-idf/components/soc/esp32s3/. -IE:/esp/esp32c3/esp-idf/components/soc/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/hal/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/hal/include -IE:/esp/esp32c3/esp-idf/components/hal/platform_port/include -IE:/esp/esp32c3/esp-idf/components/esp_rom/include -IE:/esp/esp32c3/esp-idf/components/esp_rom/include/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_rom/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_common/include -IE:/esp/esp32c3/esp-idf/components/esp_system/include -IE:/esp/esp32c3/esp-idf/components/esp_system/port/soc -IE:/esp/esp32c3/esp-idf/components/esp_system/port/include/private -IE:/esp/esp32c3/esp-idf/components/xtensa/include -IE:/esp/esp32c3/esp-idf/components/xtensa/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/lwip/include -IE:/esp/esp32c3/esp-idf/components/lwip/include/apps -IE:/esp/esp32c3/esp-idf/components/lwip/include/apps/sntp -IE:/esp/esp32c3/esp-idf/components/lwip/lwip/src/include -IE:/esp/esp32c3/esp-idf/components/lwip/port/esp32/include -IE:/esp/esp32c3/esp-idf/components/lwip/port/esp32/include/arch -IE:/esp/esp32c3/esp-idf/components/driver/include -IE:/esp/esp32c3/esp-idf/components/driver/deprecated -IE:/esp/esp32c3/esp-idf/components/driver/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/esp_pm/include -IE:/esp/esp32c3/esp-idf/components/esp_ringbuf/include -IE:/esp/esp32c3/esp-idf/components/nvs_flash/include -IE:/esp/esp32c3/esp-idf/components/spi_flash/include -IE:/esp/esp32c3/esp-idf/components/bt/include/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/bt/common/osi/include -IE:/esp/esp32c3/esp-idf/components/bt/common/api/include/api -IE:/esp/esp32c3/esp-idf/components/bt/common/btc/profile/esp/blufi/include -IE:/esp/esp32c3/esp-idf/components/bt/common/btc/profile/esp/include -IE:/esp/esp32c3/esp-idf/components/bt/host/bluedroid/api/include/api -IE:/esp/esp32c3/esp-idf/components/bt/porting/ext/tinycrypt/include -IE:/esp/esp32c3/esp-idf/components/esp_timer/include -IE:/esp/esp32c3/esp-idf/components/esp_wifi/include -IE:/esp/esp32c3/esp-idf/components/esp_event/include -IE:/esp/esp32c3/esp-idf/components/esp_phy/include -IE:/esp/esp32c3/esp-idf/components/esp_phy/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/esp_netif/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-error=format= -Wno-format -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/esp32_3c=. -fmacro-prefix-map=E:/esp/esp32c3/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dev-4379-g36f49f361c-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj -MF esp-idf\bluetooth\CMakeFiles\__idf_bluetooth.dir\bluetooth.c.obj.d -o esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj -c E:/esp32_3c/components/bluetooth/bluetooth.c
E:/esp32_3c/components/bluetooth/bluetooth.c:202:62: error: unknown type name 'prepare_type_env_t'
  202 | void example_prepare_write_event_env(esp_gatt_if_t gatts_if, prepare_type_env_t *prepare_write_env, esp_ble_gatts_cb_param_t *param)
      |                                                              ^~~~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:209:35: error: unknown type name 'prepare_type_env_t'
  209 | void example_exec_write_event_env(prepare_type_env_t *prepare_write_env, esp_ble_gatts_cb_param_t *param){
      |                                   ^~~~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c: In function 'gatts_profile_event_handler':
E:/esp32_3c/components/bluetooth/bluetooth.c:300:17: error: implicit declaration of function 'example_prepare_write_event_env' [-Werror=implicit-function-declaration]
  300 |                 example_prepare_write_event_env(gatts_if, &prepare_write_env, param);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:300:60: error: 'prepare_write_env' undeclared (first use in this function)
  300 |                 example_prepare_write_event_env(gatts_if, &prepare_write_env, param);
      |                                                            ^~~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:300:60: note: each undeclared identifier is reported only once for each function it appears in
E:/esp32_3c/components/bluetooth/bluetooth.c:306:13: error: implicit declaration of function 'example_exec_write_event_env' [-Werror=implicit-function-declaration]
  306 |             example_exec_write_event_env(&prepare_write_env, param);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:321:13: error: implicit declaration of function 'memcpy' [-Werror=implicit-function-declaration]
  321 |             memcpy(conn_params.bda, param->connect.remote_bda, sizeof(esp_bd_addr_t));
      |             ^~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:42:1: note: include '<string.h>' or provide a declaration of 'memcpy'
   41 | #include "esp_gatt_common_api.h"
  +++ |+#include <string.h>
   42 | 
E:/esp32_3c/components/bluetooth/bluetooth.c:321:13: warning: incompatible implicit declaration of built-in function 'memcpy' [-Wbuiltin-declaration-mismatch]
  321 |             memcpy(conn_params.bda, param->connect.remote_bda, sizeof(esp_bd_addr_t));
      |             ^~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:321:13: note: include '<string.h>' or provide a declaration of 'memcpy'
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
